--- a/index.html
+++ b/index.html
@@ -62,39 +62,39 @@
     })
 
     // ----- 2. Phavuer (Vue 3)
-    const { Scene, Container, Rectangle, Text } = Phavuer
-    const Box = {
-      components: { Container, Rectangle, Text },
-      template: `
-        <Container :x="x" :y="y">
-          <Rectangle :width="100" :height="100" :origin="0" :fillColor="addable ? 0x333333 : 0x888888" @pointerdown="onClickBox" />
-          <Text :x="50" :y="50" :origin="0.5" :style="fontStyle({ color: '#5AF', fontSize: 18 })" v-if="addable" text="[＋]" />
-        </Container>`,
-      props: ['x', 'y', 'addable'],
-      setup (props, context) {
-        const onClickBox = () => {
-          if (props.addable) context.emit('add')
-        }
-        return { fontStyle, onClickBox }
-      }
-    }
-    const MainScene = {
-      components: { Scene, Container, Text, Box },
-      template: `
-        <Scene name="MainScene" :autoStart="true">
-          <Container :x="20" :y="20">
-            <Text :style="fontStyle({ fontSize: 21 })" text="2. Phavuer" />
-            <Text :y="35" :style="fontStyle()" :text="\`Count: \${count}\`" />
-            <Text :x="100" :y="35" :style="fontStyle({ color: '#5AF' })" @pointerdown="count--" v-if="count > 0" text="[DELETE]" />
-            <Box :x="i * 110" :y="60" :addable="i === count" @add="count++" v-for="(_, i) in rectCount" :key="i" />
-          </Container>
-        </Scene>`,
-      setup () {
-        const count = Vue.ref(0)
-        const rectCount = Vue.computed(() => count.value < 7 ? count.value + 1 : count.value)
-        return { count, rectCount, fontStyle }
-      }
-    }
+    const { Scene, Container, Rectangle, Text, Box, MainScene } = Phavuer
+    // const Box = {
+    //   components: { Container, Rectangle, Text },
+    //   template: `
+    //     <Container :x="x" :y="y">
+    //       <Rectangle :width="100" :height="100" :origin="0" :fillColor="addable ? 0x333333 : 0x888888" @pointerdown="onClickBox" />
+    //       <Text :x="50" :y="50" :origin="0.5" :style="fontStyle({ color: '#5AF', fontSize: 18 })" v-if="addable" text="[＋]" />
+    //     </Container>`,
+    //   props: ['x', 'y', 'addable'],
+    //   setup (props, context) {
+    //     const onClickBox = () => {
+    //       if (props.addable) context.emit('add')
+    //     }
+    //     return { fontStyle, onClickBox }
+    //   }
+    // }
+    // const MainScene = {
+    //   components: { Scene, Container, Text, Box },
+    //   template: `
+    //     <Scene name="MainScene" :autoStart="true">
+    //       <Container :x="20" :y="20">
+    //         <Text :style="fontStyle({ fontSize: 21 })" text="2. Phavuer" />
+    //         <Text :y="35" :style="fontStyle()" :text="\`Count: \${count}\`" />
+    //         <Text :x="100" :y="35" :style="fontStyle({ color: '#5AF' })" @pointerdown="count--" v-if="count > 0" text="[DELETE]" />
+    //         <Box :x="i * 110" :y="60" :addable="i === count" @add="count++" v-for="(_, i) in rectCount" :key="i" />
+    //       </Container>
+    //     </Scene>`,
+    //   setup () {
+    //     const count = Vue.ref(0)
+    //     const rectCount = Vue.computed(() => count.value < 7 ? count.value + 1 : count.value)
+    //     return { count, rectCount, fontStyle }
+    //   }
+    // }
     const game = new Phaser.Game({
       type: Phaser.AUTO,
       width: 800,
